--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<!-- Work -->
 			<article id="work">
 				<h2 class="major">Entertainment</h2>
-				<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+				<span class="image main"><img style="background-color: lightgray;" src="images/8649_logo_HV_01_320x320.png" alt="" /></span>
 				<p> Current projects:
 					<p><a href="https://www.palmbeachinternationalminimoviefilmfestival.com/" target="_blank">Palm Beach
 							International Mini Movie and Film Festival</a></p>
@@ -93,8 +93,7 @@
 			<!-- About -->
 			<article id="about">
 				<h2 class="major">About</h2>
-				<span class="image main"><img style="background-color: lightgray;"
-						src="images/8649_logo_HV_01_320x320.png" alt="" /></span>
+				<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 				<p>Montebubbles was inspired by a desire to help the pets after Hurricane Katrina. Seeing a disconnect
 					between what was actually happening on the ground vs. what was being reported in the media, what was
 					initially recognized as one of the best blogs in the world by MSN about a pet show dog named
