--- a/index.html
+++ b/index.html
@@ -49,34 +49,57 @@
 								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
 							</article>
-
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Entertainment</h2>
                 <div class="work-div">
-                  <div class="work-div-img">
-                    <img src="images/BPPPIFFsq.jpg" />
-                  </div>
-                  <div class="work-div-p">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores corrupti voluptas, placeat dicta deserunt assumenda velit, recusandae doloremque ullam expedita hic ab suscipit soluta qui? Iste dolore consequatur molestiae non?</p>
-                  </div>
+                  <a href="https://www.palmbeachinternationalminimoviefilmfestival.com/" class="work-div-img" target="_blank">
+                    <img src="images/PBIMMFF-F.jpg" />
+                  </a>
+                  <a href="https://www.brentwoodinternationalfilmfestival.com/" class="work-div-img" target="_blank">
+                      <img src="images/BPPPIFFsq.jpg" />
+                  </a>
                 </div>
                 <div class="work-div work-div2">
-                <div class="work-div-img">
-                    <img src="images/PBIMMFF-F.jpg" />
-                  </div>
-                  <div class="work-div-p">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores corrupti voluptas, placeat dicta deserunt assumenda velit, recusandae doloremque ullam expedita hic ab suscipit soluta qui? Iste dolore consequatur molestiae non?</p>
+                  <a href="https://www.imdb.com/title/tt9452980/?ref_=nm_knf_i1" class="work-div-img" target="_blank">
+                    <img src="images/envy.jpg" />
+                  </a>
+                  <a href="https://www.imdb.com/title/tt9464828/?ref_=nm_flmg_prd_2" class="work-div-img" target="_blank">
+                      <img src="images/alternate.jpg" />
+                  </a>
+                </div>
+                <div class="work-div work-div2">
+                  <a href="https://www.imdb.com/title/tt9459068/?ref_=nm_flmg_prd_3" class="work-div-img" target="_blank">
+                    <img src="images/deadoralive.jpg" />
+                  </a>
+                  <a href="https://www.imdb.com/title/tt9464554/?ref_=nm_flmg_prd_4" class="work-div-img" target="_blank">
+                      <img src="images/mirror.jpg" />
+                  </a>
+                </div>
+                <div class="work-div work-div2">
+                  <a href="https://www.imdb.com/title/tt3595926/?ref_=nm_knf_t2" class="work-div-img" target="_blank">
+                    <img src="images/bond.jpg" />
+                  </a>
+                  <div class="work-div-img">
                   </div>
                 </div>
 							</article>
 
 						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
-							</article>
+            <article id="about">
+                <h2 class="major">About</h2>
+                <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+                <p>Montebubbles was inspired by a desire to help animals after Hurricane Katrina. Seeing a disconnect
+                  between what was actually happening on the ground vs. what was being reported in the media, we pivoted into what became
+                  initially recognized as one of the best blogs in the world by MSN about a pet show dog named
+                  Montebubbles transitioned into MBN Media. <br /> <br />In the past decade plus, our coverage has
+                  been reproduced in over 50 languages. We were one of the largest producers of 3D content in the early days. We have been in or contributed content in various outlets including Auto News, Celebrity
+                  Page, CNN iReport, CNN International, CSQ Magazine, Daily Motion, Deadline, FilmMagic, Forbes
+                  magazine, Georgetowner, Google, InStyle magaazine, MSN, PR Photos, Sony Crackle, TV Guide, Veoh, Vimeo, Yahoo! Voices, YouTube,
+                  WireImage. <br /> <br />Expanding beyond a news outlet, Montebubbles Entertainment evolved to
+                  develop mini movies (short films) and documentaries. We are an award winning and Oscar qualified directors and producers with
+                  numerous films each year in Cannes during the Festival de Cannes for the past 4 years.<br /> <br /><a href="http://montebubbles.net/blog21/" target="_blank"><i class="fas fa-archive"></i></p>
+              </article>
 
 						<!-- Contact -->
 							<article id="contact">
