--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
-								<ul class="icons">
+								<ul class="icons" style="display: none;">
 									<li><a href="https://twitter.com/montebubbles" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/Montebubbles/" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="https://www.instagram.com/montebubbles/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -373,11 +373,21 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</section>
 
 							</article>
-
-					</div>
+          </div>
+          <ul class="icons" style="margin-top:150px;">
+              <li><a href="https://twitter.com/montebubbles" target="_blank" class="icon brands fa-twitter"><span
+                    class="label">Twitter</span></a></li>
+              <li><a href="https://www.facebook.com/Montebubbles/" target="_blank" class="icon brands fa-facebook-f"><span
+                    class="label">Facebook</span></a></li>
+              <li><a href="https://www.instagram.com/montebubbles/" target="_blank" class="icon brands fa-instagram"><span
+                    class="label">Instagram</span></a></li>
+              <li><a href="https://www.pinterest.com/montebubbles/" target="_blank" class="icon brands fa-pinterest"><span
+                    class="label">GitHub</span></a></li>
+            </ul>
 
 				<!-- Footer -->
 					<footer id="footer">
+            <p class="copyright">&copy; Montebubbles, 2006 - 2019. </p>
 					</footer>
 
 			</div>
