added nav to article

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 								<li><a href="#work">Ent</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
 					</header>
@@ -51,7 +50,13 @@
 							</article>
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Entertainment</h2>
+                <ul class="article-nav">
+                  <li><a href="">Home</a></li>
+                  <li><a href="#work">Ent</a></li>
+                  <li><a href="#about">About</a></li>
+                  <li><a href="#contact">Contact</a></li>
+                </ul>
+                <h2 class="major">Entertainment</h2>
                 <div class="work-div">
                   <a href="https://www.palmbeachinternationalminimoviefilmfestival.com/" class="work-div-img" target="_blank">
                     <img src="images/PBIMMFF-F.jpg" />
@@ -87,6 +92,12 @@
 
 						<!-- About -->
             <article id="about">
+                <ul class="article-nav">
+                    <li><a href="">Home</a></li>
+                    <li><a href="#work">Ent</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                  </ul>
                 <h2 class="major">About</h2>
                 <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
                 <p>Montebubbles was inspired by a desire to help animals after Hurricane Katrina. Seeing a disconnect
@@ -103,6 +114,12 @@
 
 						<!-- Contact -->
 							<article id="contact">
+                  <ul class="article-nav">
+                      <li><a href="">Home</a></li>
+                      <li><a href="#work">Ent</a></li>
+                      <li><a href="#about">About</a></li>
+                      <li><a href="#contact">Contact</a></li>
+                    </ul>
 								<h2 class="major">Contact</h2>
 								<form method="post" action="contact.php">
 									<div class="fields">
@@ -379,6 +396,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                     class="label">Twitter</span></a></li>
               <li><a href="https://www.facebook.com/Montebubbles/" target="_blank" class="icon brands fa-facebook-f"><span
                     class="label">Facebook</span></a></li>
+              <li><a href="mailto:Info@montebubbles.net" target="_blank" class="icon brands fas fa-envelope-square"><span
+                    class="label">Email</span></a></li>
               <li><a href="https://www.instagram.com/montebubbles/" target="_blank" class="icon brands fa-instagram"><span
                     class="label">Instagram</span></a></li>
               <li><a href="https://www.pinterest.com/montebubbles/" target="_blank" class="icon brands fa-pinterest"><span
