added media to nav

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 							<article id="work">
                 <ul class="article-nav">
                   <li><a href="">Home</a></li>
+                  <li><a href="http://mbnnewsvideoweb.com" target="_blank">Media</a></li>
                   <li><a href="#work">Ent</a></li>
                   <li><a href="#about">About</a></li>
                   <li><a href="#contact">Contact</a></li>
@@ -94,6 +95,7 @@
             <article id="about">
                 <ul class="article-nav">
                     <li><a href="">Home</a></li>
+                    <li><a href="http://mbnnewsvideoweb.com" target="_blank">Media</a></li>
                     <li><a href="#work">Ent</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -116,6 +118,7 @@
 							<article id="contact">
                   <ul class="article-nav">
                       <li><a href="">Home</a></li>
+                      <li><a href="http://mbnnewsvideoweb.com" target="_blank">Media</a></li>
                       <li><a href="#work">Ent</a></li>
                       <li><a href="#about">About</a></li>
                       <li><a href="#contact">Contact</a></li>
