--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<meta http-equiv="Content-Security-Policy"
 		content="img-src 'self' 'unsafe-inline' * ; style-src 'self' 'unsafe-inline'  *  ; script-src 'self' 'unsafe-inline' ; font-src 'self' 'unsafe-inline'  * ; connect-src 'none' ; object-src data: 'unsafe-eval'">
-
 	</head>
 	<body class="is-preload">
 
@@ -37,7 +36,8 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="http://mbnnewsvideoweb.com" target="_blank">Media</a></li>
+                <!-- <li><a href="http://mbnnewsvideoweb.com" target="_blank">Media</a></li> -->
+                <li><a href="#intro">Media</a></li>
 								<li><a href="#work">Ent</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
@@ -50,16 +50,21 @@
 
 						<!-- Intro -->
 							<article id="intro">
+                  <ul class="article-nav">
+                    <li><a href="">Home</a></li>
+                    <li><a href="#intro">Media</a></li>
+                    <li><a href="#work">Ent</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                  </ul>
 								<h2 class="major">Media</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+                <iframe src="http://mbnnewsvideoweb.com/"></iframe>
 							</article>
 						<!-- Work -->
 							<article id="work">
                 <ul class="article-nav">
                   <li><a href="">Home</a></li>
-                  <li><a href="http://mbnnewsvideoweb.com" target="_blank">Media</a></li>
+                  <li><a href="#intro">Media</a></li>
                   <li><a href="#work">Ent</a></li>
                   <li><a href="#about">About</a></li>
                   <li><a href="#contact">Contact</a></li>
@@ -102,7 +107,7 @@
             <article id="about">
                 <ul class="article-nav">
                     <li><a href="">Home</a></li>
-                    <li><a href="http://mbnnewsvideoweb.com" target="_blank">Media</a></li>
+                    <li><a href="#intro">Media</a></li>
                     <li><a href="#work">Ent</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -125,7 +130,7 @@
 							<article id="contact">
                   <ul class="article-nav">
                       <li><a href="">Home</a></li>
-                      <li><a href="http://mbnnewsvideoweb.com" target="_blank">Media</a></li>
+                      <li><a href="#intro">Media</a></li>
                       <li><a href="#work">Ent</a></li>
                       <li><a href="#about">About</a></li>
                       <li><a href="#contact">Contact</a></li>
