altered the nav

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
 						<!-- Intro -->
 							<article id="intro">
+                <div class="nav-div">
                   <ul class="article-nav">
                     <li><a href="">Home</a></li>
                     <li><a href="#intro">Media</a></li>
@@ -58,18 +59,21 @@
                     <li><a href="#contact">Contact</a></li>
                   </ul>
 								<h2 class="major">Media</h2>
+                </div>
                 <iframe src="http://mbnnewsvideoweb.com/"></iframe>
 							</article>
 						<!-- Work -->
 							<article id="work">
-                <ul class="article-nav">
-                  <li><a href="">Home</a></li>
-                  <li><a href="#intro">Media</a></li>
-                  <li><a href="#work">Ent</a></li>
-                  <li><a href="#about">About</a></li>
-                  <li><a href="#contact">Contact</a></li>
-                </ul>
-                <h2 class="major">Entertainment</h2>
+                  <div class="nav-div">
+                      <ul class="article-nav">
+                        <li><a href="">Home</a></li>
+                        <li><a href="#intro">Media</a></li>
+                        <li><a href="#work">Ent</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                      </ul>
+                    <h2 class="major">Entertainment</h2>
+                    </div>
                 <div class="work-div">
                   <a href="https://www.palmbeachinternationalminimoviefilmfestival.com/" class="work-div-img" target="_blank">
                     <img src="images/PBIMMFF-F.jpg" />
@@ -105,14 +109,16 @@
 
 						<!-- About -->
             <article id="about">
-                <ul class="article-nav">
-                    <li><a href="">Home</a></li>
-                    <li><a href="#intro">Media</a></li>
-                    <li><a href="#work">Ent</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                  </ul>
-                <h2 class="major">About</h2>
+                <div class="nav-div">
+                    <ul class="article-nav">
+                      <li><a href="">Home</a></li>
+                      <li><a href="#intro">Media</a></li>
+                      <li><a href="#work">Ent</a></li>
+                      <li><a href="#about">About</a></li>
+                      <li><a href="#contact">Contact</a></li>
+                    </ul>
+                  <h2 class="major">About</h2>
+                  </div>
                 <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
                 <p>Montebubbles was inspired by a desire to help animals after Hurricane Katrina. Seeing a disconnect
                   between what was actually happening on the ground vs. what was being reported in the media, we pivoted into what became
@@ -123,19 +129,27 @@
                   magazine, Georgetowner, Google, InStyle magaazine, MSN, PR Photos, Sony Crackle, TV Guide, Veoh, Vimeo, Yahoo! Voices, YouTube,
                   WireImage. <br /> <br />Expanding beyond a news outlet, Montebubbles Entertainment evolved to
                   develop mini movies (short films) and documentaries. We are an award winning and Oscar qualified directors and producers with
-                  numerous films each year in Cannes during the Festival de Cannes for the past 4 years.<br /> <br /><a href="http://montebubbles.net/blog21/" target="_blank"><i class="fas fa-archive"></i></p>
+                  numerous films each year in Cannes during the Festival de Cannes for the past 4 years.
+                </p>
+                <p>
+                  <a id="archive" href="http://montebubbles.net/blog21/" target="_blank">
+                    <i class="fas fa-archive"></i>
+                  </a>
+                </p>
               </article>
 
 						<!-- Contact -->
 							<article id="contact">
-                  <ul class="article-nav">
-                      <li><a href="">Home</a></li>
-                      <li><a href="#intro">Media</a></li>
-                      <li><a href="#work">Ent</a></li>
-                      <li><a href="#about">About</a></li>
-                      <li><a href="#contact">Contact</a></li>
-                    </ul>
-								<h2 class="major">Contact</h2>
+                  <div class="nav-div">
+                      <ul class="article-nav">
+                        <li><a href="">Home</a></li>
+                        <li><a href="#intro">Media</a></li>
+                        <li><a href="#work">Ent</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                      </ul>
+                    <h2 class="major">Contact</h2>
+                    </div>
 								<form method="post" action="contact.php">
 									<div class="fields">
 										<div class="field half">
